--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,12 @@
 img {
   height: 300px;
 }
+
+.state-letter {
+  display: inline-block;
+  padding: 5px;
+}
+
+.hidden {
+  background-color: black;
+}
